fix: 修复 Java 8 兼容性问题（Path.of → Paths.get，record → class）
- 将 Path.of() 替换为 Paths.get()（Java 8 兼容）
- 将 record CommandLine 替换为普通内部类
- 编译和打包验证通过